--- a/src/Overview.css
+++ b/src/Overview.css
@@ -1,6 +1,9 @@
 h1{
     text-align: center
 }
+h3{
+    text-align: center
+}
 
 table {
     border-collapse: collapse;
@@ -29,4 +32,5 @@ table tr:hover {
     background-color: #003D4A;
     color: #fff;
 }
+
 
